<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:id="@+id/view_storage_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="15dip"
    android:singleLine="false"
    android:text="@string/resourceName" />

<TextView
    android:id="@+id/campname"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="30dip"
    android:layout_marginTop="5dip"
    android:gravity="fill_horizontal"
    android:scrollHorizontally="true"
    android:textColor="#fff"
    android:textSize="20.0sp"
    android:textStyle="bold" />
    
<!-- Operating System -->

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="15dip"
    android:singleLine="false"
    android:text="@string/description" />

<TextView
    android:id="@+id/campsummary"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="30dip"
    android:layout_marginTop="5dip"
    android:gravity="fill_horizontal"
    android:scrollHorizontally="true"
    android:textColor="#fff"
    android:textSize="20.0sp"
    android:textStyle="bold" />

<!-- Memory -->

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="15dip"
    android:singleLine="false"
    android:text="@string/parameters" />

<TextView
    android:id="@+id/parameters"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="30dip"
    android:layout_marginTop="5dip"
    android:gravity="fill_horizontal"
    android:scrollHorizontally="true"
    android:textColor="#fff"
    android:textSize="20.0sp"
    android:textStyle="bold" />

<!-- Disk -->

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="15dip"
    android:singleLine="false"
    android:text="@string/state" />

<TextView
    android:id="@+id/campstate"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="30dip"
    android:layout_marginTop="5dip"
    android:gravity="fill_horizontal"
    android:scrollHorizontally="true"
    android:textColor="#fff"
    android:textSize="20.0sp"
    android:textStyle="bold" />

<!-- Public IP Addresses -->
<!-- TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip" 
    android:layout_marginRight="10dip" 
    android:layout_marginTop="15dip"
    android:text="Links"
    android:singleLine="false"
    android:background="#A9A9A9"
    android:textColor="#000000"
    android:shadowColor="#A9A9A9"
    android:shadowRadius="3"    
    /-->    

<Button
    android:id="@+id/stopbutton"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginTop="10dip"
    android:text="@string/stopButton" />
   
</LinearLayout>
    
<!--
    android:layout_height="wrap_content"
 -->
 </ScrollView>